# Computational-Chemical-Engineering

./: .gitignore  INSTALLATION.md  QUICK_START.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
CRE/: __init__.py  chemicalReaction.py  cre_example.py
ChET/: __init__.py  thermodynamics.py  thermodynamics_example.py
FPM/: __init__.py  fluidProp.py  reynolds_example.py
HT/: __init__.py  heatTransfer.py  heat_transfer_example.py
MT/: __init__.py  massTransfer.py  mass_transfer_example.py
Math/: __init__.py
PDC/: __init__.py  pdc_example.py  processDynamicsControl.py
PDPE/: __init__.py  economics_example.py  processEconomics.py
TranPheno/: __init__.py  transportPhenomena.py  transport_phenomena_example.py
Useful Computational Math Implementations/: README.md  __init__.py  computationalMath.py  math_examples.py
